changes to index.html

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <img style="height: 300px;" src="./assets/images/illustration.png" alt="">
                 </div>
                 <div class="column right">
-                    <p style="color: white;">APSY is a Discord bot that is completely free and suitable for your Discord server. APSY is always being updated and new features are coming to the bot every 2 months. Invite APSY today and speed up your discord server</p>
+                    <p style="color: white;">Cubic is a multipurpose discord designed to make your server members have fun and stay safe at the same time. With a 99% uptime rate and a big variety of commands and categories we ensure you a great experience using it.</p>
                     <a href="#">Invite Now</a>
                 </div>
             </div>
@@ -93,25 +93,25 @@
                         <i class="fas fa-hammer"></i>
                         <div class="text">AUTO/MODERATION</div>
                         <p>
-                          APSY provides easy moderation and auto-moderation commands with the best setup. Setup auto-moderation while staff are off duty, your server should be safe with auto moderation.
+                          Cubic has all the basic commands to easily moderate your discord server and in the future it will support auto moderation too
                         </p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-smile"></i>
-                        <div class="text">REACTION ROLES</div>
+                        <div class="text">Tools</div>
                         <p>
-                          APSY's reaction role feature is used the most with unlimited. APSY provides a button menu and a select menu for users to get their roles easily. Create unlimited reaction roles categories, completely free
+                          Cubic is equipped with multiple tools to make your life and your discord experienece easier and faster
                         </p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-rocket"></i>
-                        <div class="text">Leveling</div>
+                        <div class="text">Minecraft</div>
                         <p>
-                          The leveling system is a great feature for your Discord server, using APSY's feature your server can have a great improvement with unlimited role rewards, level cards, viewing leaderboard and toggling leveling.
+                          Our bot focuses on Minecraft to provide you with the most accurate information about any server and in the future user.
                         </p>
                     </div>
                 </div>
@@ -162,7 +162,7 @@
     </section>
       <!-- footer -->
     <footer>
-        <span> © APSY - 2022 All rights reserved.</span>
+        <span> © Cubic - 2024 All rights reserved.</span>
     </footer>
 
     <script src="./assets/js/script.js"></script>
