changes to index.html

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <i class="fas fa-smile"></i>
+                        <i class="fas fa-tools"></i>
                         <div class="text">Tools</div>
                         <p>
                           Cubic is equipped with multiple tools to make your life and your discord experienece easier and faster
