changes to index.html

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <i class="fas fa-rocket"></i>
+                        <i class="fas fa-pickaxe"></i>
                         <div class="text">Minecraft</div>
                         <p>
                           Our bot focuses on Minecraft to provide you with the most accurate information about any server and in the future user.
