changes to index.html

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <nav class="navbar">
         <div class="max-width">
           <img style="height: 100px;" src="./assets/images/logo.png" alt="logo">
-            <div class="logo"><a href="#">APSY</a></div>
+            <div class="logo"><a href="#">CUBIC</a></div>
             <ul class="menu">
                 <li><a href="/" class="menu-btn">Home</a></li>
                               <li><a href="#about" class="menu-btn">About</a></li>
@@ -54,7 +54,7 @@
     <section class="home" id="home">
         <div class="max-width">
           <div class="home-content">
-                <div class="text-2">APSY</div>
+                <div class="text-2">CUBIC</div>
             <p style="color: #5e5e5e;font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;text-transform: uppercase;">
               <br>
               The bot to make server management, moderating, and accessibility easier
