--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                               <li><a href="#about" class="menu-btn">About</a></li>
                 <li><a href="#features" class="menu-btn">Features</a></li>
                 <li><a href="/pages/faq.html" class="menu-btn">FAQ</a></li>
-                <li><a href="https://discord.gg/Gn4KxpVyGd" class="menu-btn">Support</a></li>
-                <li><a href="https://dsc.gg/invite-apsy" class="menu-btn">Invite</a></li>
+                <li><a href="https://dsc.gg/cronosdevs" class="menu-btn">Support</a></li>
+                <li><a href="https://dsc.gg/cubic-bot" class="menu-btn">Invite</a></li>
             </ul>
             <div class="menu-btn">
                 <i class="fas fa-bars"></i>
@@ -59,8 +59,8 @@
               <br>
               The bot to make server management, moderating, and accessibility easier
             </p>
-                <a href="#">Invite Now</a>
-              <a href="#">Community</a>
+                <a href="https://dsc.gg/cubic-bot">Invite Now</a>
+              <a href="https://dsc.gg/cronosdevs">Community</a>
           </div>
         </div>
     </section>
