--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
             <div class="carousel owl-carousel">
                 <div class="card">
                     <div class="box">
-                        <img src="./assets/images/avatars/enfrade.png" alt="">
-                        <div class="text">Enfrade</div>
+                        <img src="./assets/images/avatars/tgk.png" alt="">
+                        <div class="text">TGKwstas</div>
                         <p><a style="border: 1px solid #0062ff;padding: 10px 20px 10px 20px;border-radius: 2px;">
                           Bot Developer
                         </a></p>
