--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-hammer"></i>
-                        <div class="text">AUTO/MODERATION</div>
+                        <div class="text">Auto/Moderation</div>
                         <p>
                           Cubic has all the basic commands to easily moderate your discord server and in the future it will support auto moderation too
                         </p>
@@ -137,7 +137,7 @@
                 <div class="card">
                     <div class="box">
                         <img src="./assets/images/avatars/lena^.png" alt="">
-                        <div class="text">Lena^</div>
+                        <div class="text">justsimplyleon</div>
                         <p>
                           <a style="border: 1px solid #0062ff;padding: 10px 20px 10px 20px;border-radius: 2px;">
                           Bot Admin
