--- a/pages/faq.html
+++ b/pages/faq.html
@@ -15,22 +15,22 @@
         <section class="faq-container">
             <div class="faq-one">
                 <!-- faq question -->
-                <h1 class="faq-page">Why does APSY go offline?</h1>
+                <h1 class="faq-page">Why does Cubic go offline?</h1>
                 <!-- faq answer -->
                 <div class="faq-body">
                     <p>
-                      APSY goes offline for reasons. It is either being updated or uptime problems, no other reasons
+                      Cubic is a free bdfd bot and it's hosted by watching ads on the app. Hence the downtime
                     </p>
                 </div>
             </div>
             <hr class="hr-line">
             <div class="faq-two">
                 <!-- faq question -->
-                <h1 class="faq-page">What language is APSY made with?</h1>
+                <h1 class="faq-page">What language is Cubic made with?</h1>
                 <!-- faq answer -->
                 <div class="faq-body">
                     <p>
-                      APSY is written in discord.js (Node.js)
+                      Cubic is hosted on Bot Designer for Discord app and it's written in their custom language called BDScript
                     </p>
                 </div>
             </div>
