--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         <i class="fas fa-hammer"></i>
                         <div class="text">Auto/Moderation</div>
                         <p>
-                          Cubic has all the basic commands to easily moderate your discord server and in the future it will support auto moderation too
+                          Cubic has all the basic commands to easily moderate your discord server and in the future it will support auto moderation too.
                         </p>
                     </div>
                 </div>
