--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="./assets/images/avatars/lena^.png" alt="">
+                        <img src="./assets/images/avatars/leon.jpg" alt="">
                         <div class="text">justsimplyleon</div>
                         <p>
                           <a style="border: 1px solid #0062ff;padding: 10px 20px 10px 20px;border-radius: 2px;">
