--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 <div class="card">
                     <div class="box">
                         <img src="./assets/images/avatars/tgk.png" alt="">
-                        <div class="text">TGKwstas</div>
+                        <div class="text">tg_kwstas</div>
                         <p><a style="border: 1px solid #0062ff;padding: 10px 20px 10px 20px;border-radius: 2px;">
                           Bot Developer
                         </a></p>
@@ -147,8 +147,8 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="./assets/images/avatars/devil-2.0.png" alt="">
-                        <div class="text">DEVIL- 2.0</div>
+                        <img src="./assets/images/avatars/skydev.png" alt="">
+                        <div class="text">skydev._.</div>
                         <p>
                           <a style="border: 1px solid #0062ff;padding: 10px 20px 10px 20px;border-radius: 2px;">
                           Bot Moderator
