--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                         <div class="text">justsimplyleon</div>
                         <p>
                           <a style="border: 1px solid #0062ff;padding: 10px 20px 10px 20px;border-radius: 2px;">
-                          Bot Admin
+                          Bot Moderator
                         </a>
                         </p>
                     </div>
